# mercury-adoption-mart

./: README.md  int_account_health_signals.sql  pyproject.toml  schema.yml  stg_product_enrollments.sql
cresta/: README.md  case_study.md  cresta_deep_dive.md  interview_intel.md  python_practice.py  questions.md  schema.md  sql_practice.sql  study_guide.md
cresta/python/: questions.py  solutions.py
cresta/sql/: questions.sql  solutions.sql
family-fuel-dashboard/: .gitignore  README.md  pyproject.toml
family-fuel-dashboard/dashboard/: app.py
family-fuel-dashboard/dashboard/pages/: 1_meal_planner.py  4_kid_friendly.py
family-fuel-dashboard/etl/: load.py  run_pipeline.py  transform.py
family-fuel-dashboard/sql/: create_marts.sql  create_tables.sql  transform_dims.sql
family-fuel-dashboard/tests/: test_transform.py
mercury/: dbt_project.yml  int_account_product_activity.sql  mart_growth__account_adoption.sql  stg_accounts.sql  stg_transactions.sql
python_practice/: pandas_polars_walkthrough.py
visa/: behavioral_prep.md
visa/bash/: questions.sh  solutions.sh
visa/python/: sample_dag.py
